fixed button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -681,8 +681,8 @@ section {
         background-color: white; 
         color: black; 
         border: 2px solid #05731c;
-        padding-right: 41.5px;
-        padding-left: 41.5px;
+        padding-right: 40.9px;
+        padding-left: 40.9px;
 
     }
 
